timesheet update system

--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'mon'"
+       "'tue'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[182], line 25\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;66;03m# Add the new managerSheetObject\u001b[39;00m\n\u001b[0;32m     19\u001b[0m         client\u001b[38;5;241m.\u001b[39mTimesheetDB\u001b[38;5;241m.\u001b[39mTimesheetRecords\u001b[38;5;241m.\u001b[39mupdate_one({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m\"\u001b[39m: timesheet[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m'\u001b[39m]}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$push\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsObjects\u001b[39m\u001b[38;5;124m\"\u001b[39m: newManagerSheetReview\u001b[38;5;241m.\u001b[39minserted_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlastUpdateDate\u001b[39m\u001b[38;5;124m\"\u001b[39m: datetime\u001b[38;5;241m.\u001b[39mnow()}}})\n\u001b[0;32m     20\u001b[0m         client\u001b[38;5;241m.\u001b[39mTimesheetDB\u001b[38;5;241m.\u001b[39mTimesheetRecords\u001b[38;5;241m.\u001b[39mupdate_one(\n\u001b[0;32m     21\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m\"\u001b[39m: timesheet[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m'\u001b[39m],},\n\u001b[0;32m     22\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$push\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\n\u001b[0;32m     23\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsObjects\u001b[39m\u001b[38;5;124m\"\u001b[39m: newManagerSheetReview\u001b[38;5;241m.\u001b[39minserted_id,\n\u001b[0;32m     24\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlastUpdateDate\u001b[39m\u001b[38;5;124m\"\u001b[39m: datetime\u001b[38;5;241m.\u001b[39mnow(),\n\u001b[1;32m---> 25\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mtimesheet\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmanagerSheetsInstances\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;28mlen\u001b[39m(timesheet[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     26\u001b[0m             }}}\n\u001b[0;32m     27\u001b[0m         )\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimesheets submitted for Review\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[14], line 25\u001b[0m\n\u001b[0;32m     14\u001b[0m             client\u001b[38;5;241m.\u001b[39mTimesheetDB\u001b[38;5;241m.\u001b[39mTimesheetRecords\u001b[38;5;241m.\u001b[39mupdate_one(\n\u001b[0;32m     15\u001b[0m                 {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m\"\u001b[39m: timesheet[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m'\u001b[39m]},\n\u001b[0;32m     16\u001b[0m                 {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$pull\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsObjects\u001b[39m\u001b[38;5;124m\"\u001b[39m: timesheet[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanagerSheetID\u001b[39m\u001b[38;5;124m'\u001b[39m]}}}\n\u001b[0;32m     17\u001b[0m             )\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;66;03m# Add the new managerSheetObject\u001b[39;00m\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;66;03m# client.TimesheetDB.TimesheetRecords.update_one({\"managerID\": timesheet['managerID']}, {\"$push\": {\"managerSheetsInstances\": {\"managerSheetsObjects\": newManagerSheetReview.inserted_id, \"lastUpdateDate\": datetime.now()}}})\u001b[39;00m\n\u001b[0;32m     20\u001b[0m         client\u001b[38;5;241m.\u001b[39mTimesheetDB\u001b[38;5;241m.\u001b[39mTimesheetRecords\u001b[38;5;241m.\u001b[39mupdate_one(\n\u001b[0;32m     21\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m\"\u001b[39m: timesheet[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanagerID\u001b[39m\u001b[38;5;124m'\u001b[39m],},\n\u001b[0;32m     22\u001b[0m             {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m$push\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\n\u001b[0;32m     23\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsObjects\u001b[39m\u001b[38;5;124m\"\u001b[39m: newManagerSheetReview\u001b[38;5;241m.\u001b[39minserted_id,\n\u001b[0;32m     24\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlastUpdateDate\u001b[39m\u001b[38;5;124m\"\u001b[39m: datetime\u001b[38;5;241m.\u001b[39mnow(),\n\u001b[1;32m---> 25\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mtimesheet\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmanagerSheetsInstances\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;28mlen\u001b[39m(timesheet[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmanagerSheetsInstances\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     26\u001b[0m             }}}\n\u001b[0;32m     27\u001b[0m         )\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimesheets submitted for Review\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'managerSheetsInstances'"
      ]
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -447,15 +447,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "managerSheetObject removed\n"
+      "managerSheetObject does not exist\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 1, 'electionId': ObjectId('7fffffff0000000000000045'), 'opTime': {'ts': Timestamp(1708955816, 4), 't': 69}, 'nModified': 1, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1708955816, 4), 'signature': {'hash': b'\\xd1n\\xc1\\t\\xaf\\x05\\xc1\\x87\\xa6\\xba\\x7f;\\x89\\xa5\\xa4\\xa0\\xaf\\x9c\\x1bX', 'keyId': 7298560311185899522}}, 'operationTime': Timestamp(1708955816, 4), 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -512,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,21 +749,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Employee Sheet Created: EmployeeSheetID :65dbbca531d767abfb8103b2\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca531d767abfb8103b3\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca531d767abfb8103b4\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca531d767abfb8103b5\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca531d767abfb8103b6\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca631d767abfb8103b7\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca631d767abfb8103b8\n",
-      "Employee Sheet Created: EmployeeSheetID :65dbbca631d767abfb8103b9\n"
+      "Employee Sheet Created: EmployeeSheetID :65dc9e789bb868656fb83915\n",
+      "Employee Sheet Created: EmployeeSheetID :65dc9e789bb868656fb83916\n",
+      "Employee Sheet Created: EmployeeSheetID :65dc9e789bb868656fb83917\n",
+      "Employee Sheet Created: EmployeeSheetID :65dc9e789bb868656fb83918\n",
+      "Employee Sheet Created: EmployeeSheetID :65dc9e789bb868656fb83919\n"
      ]
     }
    ],
@@ -973,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1241,22 +1248,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WorkDay:\n",
+    "    def __init__(self, work: bool):\n",
+    "        self.work = work\n",
+    "        self.hour = int(0)\n",
+    "        self.comment = str(\"\")\n",
+    "\n",
+    "class EmployeeSheetObject:\n",
+    "    def __init__(self, projectID: ObjectId, taskID: ObjectId, workDay: dict[str, WorkDay], description: str):\n",
+    "        self.projectID = projectID\n",
+    "        self.taskID = taskID\n",
+    "        self.workDay = workDay\n",
+    "        self.description = description\n",
+    "    def to_dict(self):\n",
+    "        return {\n",
+    "            \"projectID\": self.projectID,\n",
+    "            \"taskID\": self.taskID,\n",
+    "            \"workDay\": {day: vars(workDay) for day, workDay in self.workDay.items()},\n",
+    "            \"description\": self.description\n",
+    "        }\n",
+    "class EmployeeSheet:\n",
+    "    def __init__(self, employeeID: ObjectId, managerID: ObjectId, startDate: datetime, endDate: datetime, employeeSheetObject: list[EmployeeSheetObject] = []):\n",
+    "        self.employeeID = employeeID\n",
+    "        self.managerID = managerID\n",
+    "        self.startDate = startDate\n",
+    "        self.endDate = endDate\n",
+    "        self.employeeSheetObject = employeeSheetObject\n",
+    "        self.status = \"Testing\"\n",
+    "    def to_dict(self):\n",
+    "        return {\n",
+    "            \"employeeID\": self.employeeID,\n",
+    "            \"managerID\": self.managerID,\n",
+    "            \"startDate\": self.startDate,\n",
+    "            \"endDate\": self.endDate,\n",
+    "            \"employeeSheetObject\": [vars(employeeSheetInstance) for employeeSheetInstance in self.employeeSheetObject],\n",
+    "            \"status\": self.status\n",
+    "        } \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function pytz.timezone(zone)>"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee Sheet Created: EmployeeSheetID :65df560cf76d89efc8add969\n",
+      "Employee Sheet Created: EmployeeSheetID :65df560cf76d89efc8add96a\n",
+      "Employee Sheet Created: EmployeeSheetID :65df560df76d89efc8add96b\n",
+      "Employee Sheet Created: EmployeeSheetID :65df560df76d89efc8add96c\n",
+      "Employee Sheet Created: EmployeeSheetID :65df560df76d89efc8add96d\n"
+     ]
     }
    ],
    "source": [
-    "timezone"
+    "from datetime import datetime, timedelta\n",
+    "from pymongo import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from bson import ObjectId\n",
+    "# from .models import EmployeeSheet\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "\n",
+    "def get_next_week():\n",
+    "    # Get the current date and time\n",
+    "    current_date = datetime.now()\n",
+    "    # Calculate the number of days until the next Monday\n",
+    "    days_until_next_monday = 7 - current_date.weekday() if current_date.weekday() > 0 else 1\n",
+    "    # Add the number of days until the next Monday to the current date\n",
+    "    next_monday = current_date + timedelta(days=days_until_next_monday)\n",
+    "    # Get the date of the next Monday at midnight\n",
+    "    next_monday_midnight = next_monday.replace(hour=0, minute=0, second=0, microsecond=0)\n",
+    "    # Get the date of the next to next Monday at midnight\n",
+    "    next_to_next_monday_midnight = next_monday_midnight.replace(hour=23, minute=59, second=59, microsecond=59) + timedelta(days=6)\n",
+    "    return next_monday_midnight, next_to_next_monday_midnight\n",
+    "\n",
+    "employee_sheets_collection = client.TimesheetDB.EmployeeSheets\n",
+    "employee_collection = client.WorkBaseDB.Members\n",
+    "# Get next week\n",
+    "next_monday, next_to_next_monday = get_next_week()\n",
+    "currentDate = datetime.now()\n",
+    "\n",
+    "# format dates\n",
+    "# endDate = datetime.strptime(data['endDate'], \"%Y-%m-%d %H:%M:%S\")\n",
+    "next_monday = next_monday.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "next_to_next_monday = next_to_next_monday.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "# find list of all employees in employee collection where isEmployee is true\n",
+    "employees = list(employee_collection.find({\"isEmployee\": True},{\"employeeID\": \"$_id\", \"managerID\": \"$reportsTo\"}))\n",
+    "for employee in employees:\n",
+    "    new_employeeSheet = EmployeeSheet(employeeID=employee[\"employeeID\"], managerID=employee[\"managerID\"], startDate=next_monday, endDate=next_to_next_monday)\n",
+    "    # create timesheet for all employees\n",
+    "    result = employee_sheets_collection.insert_one(new_employeeSheet.to_dict())\n",
+    "    if (result):\n",
+    "        print(\"Employee Sheet Created\"+\": EmployeeSheetID :\"+ str(result.inserted_id))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_employee_sheets(client):\n",
+    "    try:\n",
+    "        # Check the database connection\n",
+    "        if isinstance(client, MongoClient):  # If the connection is successful\n",
+    "            # Get next week\n",
+    "            next_monday, next_to_next_monday = get_next_week()\n",
+    "\n",
+    "            # format dates\n",
+    "            next_monday = next_monday.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "            next_to_next_monday = next_to_next_monday.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "            # find list of all employees in employee collection where isEmployee is true\n",
+    "            employees = list(client.WorkBaseDB.Members.find({\"isEmployee\": True},{\"employeeID\": \"$_id\", \"managerID\": \"$reportsTo\"}))\n",
+    "            for employee in employees:\n",
+    "                new_employeeSheet = EmployeeSheet(employeeID=employee[\"employeeID\"], managerID=employee[\"managerID\"], startDate=next_monday, endDate=next_to_next_monday)\n",
+    "                # check if employeeSheet exists for the same duration for same employee\n",
+    "                current_employeeSheet = client.TimesheetDB.EmployeeSheets.find_one({\"employeeID\": employee[\"employeeID\"], \"startDate\": next_monday, \"endDate\": next_to_next_monday})\n",
+    "                # create timesheet for all employees\n",
+    "                if not current_employeeSheet:\n",
+    "                    result = client.TimesheetDB.EmployeeSheets.insert_one(new_employeeSheet.to_dict())\n",
+    "                    if (result):\n",
+    "                        print(\"[OK] --- Employee Sheet Created\"+\" : EmployeeSheetID : \"+ str(result.inserted_id), \" : EmployeeID : \"+ str(employee[\"employeeID\"]))\n",
+    "                    else:\n",
+    "                        print(\"[ERROR] --- Employee Sheet Creation Failed\"+\" : EmployeeID : \"+ str(employee[\"employeeID\"]))\n",
+    "                else:\n",
+    "                    print(\"[INFO] --- Employee Sheet Already Exists\"+\" : EmployeeID : \"+ str(employee[\"employeeID\"]))\n",
+    "\n",
+    "        else:\n",
+    "            # If the connection fails, log an error message\n",
+    "            print(\"[ERROR] --- Failed to connect to the MongoDB server while creating employee sheets\")\n",
+    "    except Exception as e:\n",
+    "        # If an error occurs, log an error message\n",
+    "        print(\"[ERROR] --- Error creating employee sheets: \",type(e).__name__, \":\", str(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK] --- Employee Sheet Created : EmployeeSheetID : 65df6078f76d89efc8add96e  : EmployeeID : 65c3fecb2b6c3e4c32082962\n",
+      "[OK] --- Employee Sheet Created : EmployeeSheetID : 65df6078f76d89efc8add96f  : EmployeeID : 65c408582b6c3e4c3208296d\n",
+      "[OK] --- Employee Sheet Created : EmployeeSheetID : 65df6078f76d89efc8add970  : EmployeeID : 65c54c60f8aef7777e70654c\n",
+      "[OK] --- Employee Sheet Created : EmployeeSheetID : 65df6078f76d89efc8add971  : EmployeeID : 65c54c60f8aef7777e70654b\n",
+      "[OK] --- Employee Sheet Created : EmployeeSheetID : 65df6078f76d89efc8add972  : EmployeeID : 65c54c60f8aef7777e70654d\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_employee_sheets(client)"
    ]
   },
   {
