--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,6 +1416,158 @@
    ],
    "source": [
     "create_employee_sheets(client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "def get_current_week():\n",
+    "    '''\n",
+    "    This function calculates the date of the current Monday at midnight and the date of the next Monday at midnight.\n",
+    "    It returns the dates of the current Monday and the next Monday at midnight.\n",
+    "    '''\n",
+    "    current_date = datetime.now()  # Get the current date and time\n",
+    "\n",
+    "    # Calculate the number of days until the next Monday\n",
+    "    # If today is Monday, set it to 1, else calculate the remaining days of the week\n",
+    "    # days_until_next_monday = 7 - current_date.weekday() if current_date.weekday() > 0 else 1\n",
+    "\n",
+    "    current_monday = current_date - timedelta(days=current_date.weekday())  # Subtract the number of days until the next Monday from the current date\n",
+    "\n",
+    "    # Get the date of the current Monday at midnight by replacing the hour, minute, second, and microsecond of current_monday with 0\n",
+    "    current_monday_midnight = current_monday.replace(hour=0, minute=0, second=0, microsecond=0)\n",
+    "\n",
+    "    # Get the date of the next Monday at midnight by adding 7 days to current_monday_midnight\n",
+    "    next_monday_midnight = current_monday_midnight.replace(hour=23, minute=59, second=59 ) + timedelta(days=6)\n",
+    "\n",
+    "    return current_monday_midnight, next_monday_midnight  # Return the dates of the current Monday and the next Monday at midnight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_monday_midnight, next_monday_midnight = get_current_week()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-02-26 00:00:00 2024-03-03 23:59:59\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(current_monday_midnight, next_monday_midnight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "default_timesheets = list(client.TimesheetDB.EmployeeSheets.find({\"status\": \"Reviewing\", \n",
+    "                                                                            \"$and\": [{\"employeeSheetObject\": {\"$elemMatch\": {\"workDay.sat.work\": False}}},\n",
+    "                                                                                    {\"employeeSheetObject\": {\"$elemMatch\": {\"workDay.sun.work\": False}}}]})\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('65dfbedd2da6c6a6d995aec8'),\n",
+       "  'employeeID': '65c408582b6c3e4c3208296d',\n",
+       "  'managerID': ObjectId('65c409092b6c3e4c3208296f'),\n",
+       "  'startDate': datetime.datetime(2024, 2, 26, 0, 0),\n",
+       "  'endDate': datetime.datetime(2024, 3, 3, 23, 59, 59),\n",
+       "  'employeeSheetObject': [{'projectID': ObjectId('65cd1835b13730056f257bd7'),\n",
+       "    'taskID': ObjectId('65c409612b6c3e4c32082970'),\n",
+       "    'workDay': {'mon': {'work': True,\n",
+       "      'hour': 8,\n",
+       "      'comment': 'Hard Work Paid Well'},\n",
+       "     'tue': {'work': True, 'hour': 8, 'comment': ''},\n",
+       "     'wed': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'thu': {'work': True, 'hour': 8, 'comment': 'Worked Very Hard Today'},\n",
+       "     'fri': {'work': True, 'hour': 8, 'comment': 'Finished Timesheet Fully'},\n",
+       "     'sat': {'work': False, 'hour': 0, 'comment': ''},\n",
+       "     'sun': {'work': False, 'hour': 0, 'comment': ''}},\n",
+       "    'description': 'TESTING PURPOSES',\n",
+       "    'billable': True}],\n",
+       "  'status': 'Reviewing'}]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "default_timesheets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekend_timesheets = list(client.TimesheetDB.EmployeeSheets.find({\"status\": \"Ongoing\", \n",
+    "                                                                            \"$or\": [{\"employeeSheetObject\": {\"$elemMatch\": {\"workDay.sat.work\": True}}},\n",
+    "                                                                                    {\"employeeSheetObject\": {\"$elemMatch\": {\"workDay.sun.work\": True}}}]})\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('65df6078f76d89efc8add971'),\n",
+       "  'employeeID': ObjectId('65c3fecb2b6c3e4c32082962'),\n",
+       "  'managerID': ObjectId('65c408582b6c3e4c3208296d'),\n",
+       "  'startDate': datetime.datetime(2024, 3, 3, 18, 30),\n",
+       "  'endDate': datetime.datetime(2024, 3, 10, 18, 29, 59),\n",
+       "  'employeeSheetObject': [{'projectID': ObjectId('65cd1835b13730056f257bd7'),\n",
+       "    'taskID': ObjectId('65c409612b6c3e4c32082970'),\n",
+       "    'workDay': {'mon': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'tue': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'wed': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'thu': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'fri': {'work': True, 'hour': 0, 'comment': ''},\n",
+       "     'sat': {'work': False, 'hour': 0, 'comment': ''},\n",
+       "     'sun': {'work': False, 'hour': 0, 'comment': ''}},\n",
+       "    'description': 'YOGI Test 2.0'}],\n",
+       "  'status': 'Ongoing'}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weekend_timesheets"
    ]
   },
   {
