--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,6 +1568,144 @@
    ],
    "source": [
     "weekend_timesheets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# project all employeeID, name, email, reportsTo and role. merge FirstName\n",
+    "employees = list(client.sample_employee.employeeData.find({},{\"employeeID\": \"$_id\", \"FirstName\": 1, \"mail\": 1, \"reportsTo\": 1, \"role_name\": 1}))\n",
+    "# employees = list(client.sample_employee.employeeData.aggregate(employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('65c4165fc09b85e6570f5063'),\n",
+       "  'FirstName': 'Manimit',\n",
+       "  'mail': 'Manimit@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5063')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5064'),\n",
+       "  'FirstName': 'Akashdeep',\n",
+       "  'mail': 'Akashdeep@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5064')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5065'),\n",
+       "  'FirstName': 'Parnashree',\n",
+       "  'mail': 'Parnashree@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5065')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5066'),\n",
+       "  'FirstName': 'Sahil - Marketing',\n",
+       "  'mail': 'Sahil@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5066')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5067'),\n",
+       "  'FirstName': 'Anish',\n",
+       "  'mail': 'Anish@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5067')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5068'),\n",
+       "  'FirstName': 'Divyansh',\n",
+       "  'mail': 'Divyansh@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5068')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f5069'),\n",
+       "  'FirstName': 'Yathaarth',\n",
+       "  'mail': 'Yathaarth@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f5069')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506a'),\n",
+       "  'FirstName': 'new_name4',\n",
+       "  'mail': 'Admin@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506a')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506b'),\n",
+       "  'FirstName': 'Aryan',\n",
+       "  'mail': 'Aryan@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506b')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506c'),\n",
+       "  'FirstName': 'Puneet',\n",
+       "  'mail': 'puneet@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506c')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506d'),\n",
+       "  'FirstName': 'Yogesh',\n",
+       "  'mail': 'Yogesh@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506d')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506e'),\n",
+       "  'FirstName': 'Hemant',\n",
+       "  'mail': 'HemantBhatt@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506e')},\n",
+       " {'_id': ObjectId('65c4165fc09b85e6570f506f'),\n",
+       "  'FirstName': 'Aditi',\n",
+       "  'mail': 'Aditi@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65c4165fc09b85e6570f506f')},\n",
+       " {'_id': ObjectId('65ca6baafac5ce78a9a4c44b'),\n",
+       "  'FirstName': 'Manimit',\n",
+       "  'mail': 'Manimit@EncryptionIntern.onmicrosoft.com',\n",
+       "  'employeeID': ObjectId('65ca6baafac5ce78a9a4c44b')},\n",
+       " {'_id': ObjectId('65ca9444fac5ce78a9a4c462'),\n",
+       "  'FirstName': 'Hemant',\n",
+       "  'mail': 'Hemant@EncryptionIntern.onmicrosoft.com',\n",
+       "  'employeeID': ObjectId('65ca9444fac5ce78a9a4c462')},\n",
+       " {'_id': ObjectId('65ca9444fac5ce78a9a4c463'),\n",
+       "  'FirstName': 'Aditi',\n",
+       "  'mail': 'Aditi@EncryptionIntern.onmicrosoft.com',\n",
+       "  'employeeID': ObjectId('65ca9444fac5ce78a9a4c463')},\n",
+       " {'_id': ObjectId('65ca9444fac5ce78a9a4c464'),\n",
+       "  'FirstName': 'Aryan',\n",
+       "  'mail': 'Aryan@EncryptionIntern.onmicrosoft.com',\n",
+       "  'employeeID': ObjectId('65ca9444fac5ce78a9a4c464')},\n",
+       " {'_id': ObjectId('65ca9444fac5ce78a9a4c465'),\n",
+       "  'FirstName': 'Yogesh',\n",
+       "  'mail': 'Yogesh@EncryptionIntern.onmicrosoft.com',\n",
+       "  'employeeID': ObjectId('65ca9444fac5ce78a9a4c465')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f4e'),\n",
+       "  'FirstName': 'Surabhi',\n",
+       "  'mail': 'Surabhi@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f4e')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f4f'),\n",
+       "  'FirstName': 'Shubham',\n",
+       "  'mail': 'Shubham@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f4f')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f50'),\n",
+       "  'FirstName': 'Shivam Sharma',\n",
+       "  'mail': 'Shivam@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f50')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f52'),\n",
+       "  'FirstName': 'Leurelle',\n",
+       "  'mail': 'Leurelle@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f52')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f53'),\n",
+       "  'FirstName': 'Jamie Willett',\n",
+       "  'mail': 'Jamie@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f53')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f54'),\n",
+       "  'FirstName': 'Nischinth',\n",
+       "  'mail': 'Nischinth@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f54')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f55'),\n",
+       "  'FirstName': 'Riley',\n",
+       "  'mail': 'Riley@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f55')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f56'),\n",
+       "  'FirstName': 'Amy',\n",
+       "  'mail': 'Amy@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f56')},\n",
+       " {'_id': ObjectId('65dc96a62ec52e14085b2f57'),\n",
+       "  'FirstName': 'Subhayu',\n",
+       "  'mail': 'Subhayu@encryptionconsulting.com',\n",
+       "  'employeeID': ObjectId('65dc96a62ec52e14085b2f57')}]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees"
    ]
   },
   {
